# AgentIndex

./: .gitignore  CLAUDE.md  README.md  package-lock.json
apps/core/: package.json  pylock.toml  pyproject.toml  wrangler.jsonc
apps/core/app/: discovery.py  main.py  store.py  ws.py
apps/core/migrations/: 0001_init.sql
apps/core/src/: entry.py
apps/core/src/app/: discovery.py  models.py  store.py
apps/demo-agents/demo_agents/: common.py  concierge.py  driver.py  inventory.py  pricing.py
apps/realtime/: package-lock.json  package.json  wrangler.jsonc
apps/realtime/src/: index.ts
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx
apps/web/components/: Dashboard.tsx  Inventory.tsx  Traffic.tsx
apps/web/lib/: types.ts
scripts/: dev.sh
